--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,20 @@
 version: '3.8'
 
 services:
+  eye-disease-api:
+    build:
+      context: .
+      dockerfile: Dockerfile  # You need a proper Dockerfile in the root directory
+    ports:
+      - "8000:8000"
+    volumes:
+      - .:/app
+    depends_on:
+      - prometheus
+    environment:
+      - PROMETHEUS_MULTIPROC_DIR=/tmp
+    command: uvicorn etl_pipeline.serve_onnx:app --host 0.0.0.0 --port 8000
+
   prometheus:
     image: prom/prometheus
     volumes:
